vendor/structopt-0.3.21/tests/ui/external_subcommand_wrong_type.stderr
error[E0308]: mismatched types
  --> $DIR/external_subcommand_wrong_type.rs:13:15
   |
13 |     Other(Vec<CString>)
   |               ^^^^^^^ expected struct `CString`, found struct `OsString`
   |
   = note: expected struct `Vec<CString>`
              found struct `Vec<OsString>`
