vendor/structopt-0.3.21/tests/ui/external_subcommand_wrong_type.rs
use structopt::StructOpt;
use std::ffi::CString;

#[derive(StructOpt, Debug)]
struct Opt {
    #[structopt(subcommand)]
    cmd: Command,
}

#[derive(StructOpt, Debug)]
enum Command {
    #[structopt(external_subcommand)]
    Other(Vec<CString>)
}

fn main() {
    let opt = Opt::from_args();
    println!("{:?}", opt);
}